# Dungeon

./: .editorconfig  .git-commit-msg.txt  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.cmd  gen-vs.cmd
assets/lang/: de.lang  en.lang  es.lang  it.lang  ru.lang
assets/maps/: level1.ent  level1.map
assets/models/: ancient_pot.gltf  archway.gltf  banner.gltf  barrel.gltf  blob.gltf  boulder.gltf  brazier.gltf  ceiling_block.gltf  ceiling_block_worn_high.gltf  ceiling_block_worn_low.gltf  ceiling_block_worn_med.gltf  chest.gltf  column.gltf  crate.gltf  door.gltf  floor_block.gltf  floor_block_worn_high.gltf  floor_block_worn_low.gltf  floor_block_worn_med.gltf  fountain.gltf  mossy_rock.gltf  mummy.gltf  pillar.gltf  portcullis.gltf  pot.gltf  rope.gltf  rune_tablet.gltf  sconce.gltf  skel_human.gltf  skeleton.gltf  stairs.gltf  statue.gltf  wall_block.gltf  wall_block_worn_high.gltf  wall_block_worn_low.gltf  wall_block_worn_med.gltf  worn_brick_red_high.gltf  worn_brick_red_low.gltf  worn_brick_red_med.gltf  worn_broken_tile_high.gltf  (+47 more)
assets/projects/dungeon-demo/: project.ini
assets/projects/dungeon-demo/catalog/: ceilings.cat  decorations.cat  doors.cat  fixtures.cat  floors.cat  items.cat  monsters.cat  spells.cat  stairs.cat  walls.cat
assets/projects/dungeon-demo/levels/: level1.ent  level1.map  level2.ent  level2.map
assets/shaders/: particle.hlsl  scene.hlsl  shadow.hlsl  sprite.hlsl
assets/textures/: SOURCES.txt
docs/: ARCHITECTURE.md  DIAGRAMS.md  ai.md  animation.md  costs.md  drive.ps1  items.md  magic system.md  movement.md
src/Animation/: Animator.cpp  Animator.h  CMakeLists.txt  CreatureState.h
src/Assets/: CMakeLists.txt  Dds.cpp  Dds.h  File.cpp  File.h  Image.cpp  Image.h  Model.cpp  Model.h  ObjLoader.cpp  Wav.cpp  Wav.h
src/Audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
src/Core/: Assert.h  CMakeLists.txt  Easing.h  Loc.cpp  Loc.h  Log.cpp  Log.h  MathTypes.h  Paths.cpp  Paths.h  StringUtil.cpp  StringUtil.h  ThreadManager.cpp  ThreadManager.h  Time.cpp  Time.h  Types.h
src/Game/: AnimatedProp.cpp  AnimatedProp.h  AssetDialog.cpp  AssetDialog.h  AssetUtil.cpp  AssetUtil.h  CMakeLists.txt  Catalog.cpp  Catalog.h  Character.cpp  Character.h  Combat.cpp  Combat.h  DevConsole.cpp  DevConsole.h  DungeonEntities.cpp  DungeonEntities.h  DungeonMap.cpp  DungeonMap.h  DungeonMeshBuilder.cpp  DungeonMeshBuilder.h  DungeonWorld.cpp  DungeonWorld.h  DungeonWorld_Load.cpp  DungeonWorld_Render.cpp  DungeonWorld_Save.cpp  Entity.cpp  Entity.h  EntityInspector.cpp  EntityInspector.h  FireEffect.cpp  FireEffect.h  FixtureInspector.cpp  FixtureInspector.h  Game.cpp  Game.h  GameSettings.cpp  GameSettings.h  GameUI.cpp  GameUI.h  (+44 more)
src/Graphics/: CMakeLists.txt  Camera.h  D3DUtil.h  DisplayEnum.cpp  DisplayEnum.h  GraphicsDevice.cpp  GraphicsDevice.h  Lights.h  Mesh.cpp  Mesh.h  ModelPreview.cpp  ModelPreview.h  ParticleBatch.cpp  ParticleBatch.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  UploadAllocator.cpp  UploadAllocator.h
src/Main/: CMakeLists.txt  Main.cpp
src/Platform/: CMakeLists.txt  FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  PerfMonitor.cpp  PerfMonitor.h  Process.cpp  Process.h  Window.cpp  Window.h
src/UI/: CMakeLists.txt  Controls.cpp  Controls.h  Font.cpp  Font.h  UIContext.cpp  UIContext.h  Widget.h
tools/: ConvertMesh.py  FetchAnimLibrary.ps1  FetchModels.ps1  FetchTextures.ps1  FetchUltraTextures.ps1  ImportAnimLibrary.py  gen_slot_icons.ps1
tools/AssetBaker/: Bc7Encoder.cpp  Bc7Encoder.h  CMakeLists.txt  GltfWriter.cpp  GltfWriter.h  ImportTextures.cpp  ImportTextures.h  Main.cpp  MipBaker.cpp  MipBaker.h  ModelBaker.cpp  ModelBaker.h  ModelImport.cpp  ModelImport.h  Noise.h  PortraitBaker.cpp  PortraitBaker.h  RuneBaker.cpp  RuneBaker.h  SoundBaker.cpp  SoundBaker.h  SplatBaker.cpp  SplatBaker.h  TextureBaker.cpp  TextureBaker.h  TitleBaker.cpp  TitleBaker.h
tools/ThreadStress/: CMakeLists.txt  Main.cpp
